Bug 5 - Em table eu adicionei os elementos align-items: center e margin: auto.

--- a/modulo2/css-bugfixes/index.css
+++ b/modulo2/css-bugfixes/index.css
@@ -120,6 +120,8 @@ div:last-child {
 
 table {
     width: 60%;
+    align-items: center;
+    margin: auto;
 }
 
 td button {
